--- a/src/main/resources/templates/testes/teste.html
+++ b/src/main/resources/templates/testes/teste.html
@@ -8,17 +8,13 @@
 
 	<div style="text-align: center;">
 		<marquee>
-			<h1>
-				Olá, <span th:text="${var}"></span>
-			</h1>
+			<h1>Olá, <span th:text="${var}"></span></h1>
 		</marquee>
+		
+		<br>
+		
+		<h1>Meu nome é <span th:text="${nome}"></span></h1>
 	</div>
-
-	<br />
-
-	<h1>
-		Meu nome é <span th:text="${name}"></span>
-	</h1>
 
 </body>
 </html>
