--- a/src/main/resources/templates/pessoa/form_cad.html
+++ b/src/main/resources/templates/pessoa/form_cad.html
@@ -25,7 +25,7 @@
             	th:errorclass="is-invalid">
         	    <div class="invalid-feedback" th:errors="*{cpf}"></div><br>
             	
-            	Data Nascimento: 
+            	Data de Nascimento: 
             	<input class="form-control" type="date" th:field="*{dataNascimento}"
             	 th:errorclass="is-invalid">
         	    <div class="invalid-feedback" th:errors="*{dataNascimento}"></div>
